Pass the SignType

--- a/eng/templates/default-build.yml
+++ b/eng/templates/default-build.yml
@@ -74,7 +74,7 @@ jobs:
       value: false # Workaround for https://github.com/dotnet/core-eng/issues/2812
     - ${{ if or(ne(parameters.codeSign, 'true'), ne(variables['System.TeamProject'], 'internal')) }}:
       - name: _SignType
-        value: ''
+        value: 'test'
     - ${{ if and(eq(parameters.codeSign, 'true'), eq(variables['System.TeamProject'], 'internal')) }}:
       - name: TeamName
         value: AspNetCore
@@ -98,6 +98,7 @@ jobs:
         -prepareMachine
         -warnaserror $False
         /p:OfficialBuildId=$(BUILD.BUILDNUMBER)
+        /p:DotNetSignType=$(_SignType)
       displayName: Run cibuild.cmd
   - ${{ if ne(parameters.agentOs, 'Windows') }}:
     - script: eng/common/cibuild.sh
@@ -105,6 +106,7 @@ jobs:
         --configuration $(BuildConfiguration)
         --prepareMachine
         /p:OfficialBuildId=$(BUILD.BUILDNUMBER)
+        /p:DotNetSignType=$(_SignType)
       displayName: Run cibuild.sh
   - task: PublishTestResults@2
     displayName: Publish xUnit Test Results
