--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,40 +1,123 @@
-#
-# See https://docs.microsoft.com/en-us/vsts/pipelines/yaml-schema for details
-#
+variables:
+  - name: _TeamName
+    value: AspNetCore
 
-# Only run CI builds for these branches
+# CI and PR triggers
 trigger:
-  branches:
-    include:
-    - 'master'
-    - 'release/*'
-    - 'internal/release/*'
-# Run PR validation on all branches
-pr:
-  branches:
-    include:
-    - '*'
+- master
 
-name: $(Date:yyyyMMdd).$(Rev:rr)
+pr:
+- master
 
 jobs:
-- template: eng/templates/default-build.yml
+- template: /eng/common/templates/jobs/jobs.yml
   parameters:
-    agentOs: Windows
-    configuration: Release
-    codeSign: true
-    publishToBar: true
-    artifacts:
-      publish: true
-      name: packages
-      path: artifacts/Release/packages
+    enableMicrobuild: true
+    enablePublishBuildArtifacts: true
+    enablePublishTestResults: true
+    enablePublishBuildAssets: true
+    enableTelemetry: true
+    helixRepo: aspnet/Extensions
+    jobs:
+    - job: Windows
+      pool:
+        # For public or PR jobs, use the hosted pool.  For internal jobs use the internal pool.
+        # Will eventually change this to two BYOC pools.
+        ${{ if ne(variables['System.TeamProject'], 'internal') }}:
+          name: Hosted VS2017
+          vmImage: vs2017-win2016
+        ${{ if eq(variables['System.TeamProject'], 'internal') }}:
+          name: dotnet-internal-temp
+      variables:
+      # Only enable publishing in official builds.
+      - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+        # DotNet-Blob-Feed provides: dotnetfeed-storage-access-key-1
+        # Publish-Build-Assets provides: MaestroAccessToken, BotAccount-dotnet-maestro-bot-PAT
+        - group: DotNet-Blob-Feed
+        - group: Publish-Build-Assets
+        - name: _OfficialBuildArgs
+          value: /p:DotNetSignType=$(_SignType)
+                 /p:TeamName=$(_TeamName)
+                 /p:DotNetPublishBlobFeedKey=$(dotnetfeed-storage-access-key-1)
+                 /p:DotNetPublishBlobFeedUrl=https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json
+                 /p:DotNetPublishToBlobFeed=$(_DotNetPublishToBlobFeed)
+                 /p:OfficialBuildId=$(BUILD.BUILDNUMBER)
+      # else
+      - ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+        - name: _OfficialBuildArgs
+          value: ''
+      strategy:
+        matrix:
+          Debug:
+            _BuildConfig: Debug
+            _SignType: test
+            _DotNetPublishToBlobFeed: false
+            _BuildArgs: ''
+          Release:
+            _BuildConfig: Release
+            # PRs or external builds are not signed.
+            ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+              _SignType: test
+              _DotNetPublishToBlobFeed: false
+              _BuildArgs: ''
+            ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+              _SignType: real
+              _DotNetPublishToBlobFeed: true
+              _BuildArgs: $(_OfficialBuildArgs)
+      steps:
+      - checkout: self
+        clean: true
+      - script: eng\common\cibuild.cmd
+          -warnaserror $False
+          -configuration $(_BuildConfig)
+          -prepareMachine
+          $(_BuildArgs)
+        displayName: Build and Publish
 
-- template: eng/templates/default-build.yml
-  parameters:
-    agentOs: macOS
-    configuration: Release
+    - job: Ubuntu_16_04
+      displayName: 'Ubuntu 16.04'
+      pool:
+        name: Hosted Ubuntu 1604
+        vmImage: ubuntu-16.04
+      strategy:
+        matrix:
+          Debug:
+            _BuildConfig: Debug
+            _SignType: none
+            _DotNetPublishToBlobFeed : false
+          Release:
+            _BuildConfig: Release
+            _SignType: none
+            _DotNetPublishToBlobFeed : false
+      steps:
+      - checkout: self
+        clean: true
+      - script: eng/common/cibuild.sh
+          --warnAsError false
+          --configuration $(_BuildConfig)
+          --prepareMachine
+        displayName: Build
 
-- template: eng/templates/default-build.yml
-  parameters:
-    agentOs: Linux
-    configuration: Release
+    - job: OSX_10_13
+      displayName: 'OSX'
+      pool:
+        name: Hosted macOS
+        vmImage: macOS-10.13
+      strategy:
+        matrix:
+          Debug:
+            _BuildConfig: Debug
+            _SignType: none
+            _DotNetPublishToBlobFeed : false
+          Release:
+            _BuildConfig: Release
+            _SignType: none
+            _DotNetPublishToBlobFeed : false
+      steps:
+      - checkout: self
+        clean: true
+      - script: eng/common/cibuild.sh
+          --warnAsError false
+          --configuration $(_BuildConfig)
+          --prepareMachine
+        displayName: Build
