--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,6 +73,17 @@ jobs:
           -prepareMachine
           $(_BuildArgs)
         displayName: Build and Publish
+      - task: PublishBuildArtifacts@1
+        displayName: Upload package artifacts
+        condition: eq(variables['system.pullrequest.isfork'], false)
+        inputs:
+          pathtoPublish: artifacts/
+          ${{ if eq(parameters.artifacts.name, '') }}:
+            artifactName: artifacts-$(AgentOsName)-$(BuildConfiguration)
+          ${{ if ne(parameters.artifacts.name, '') }}:
+            artifactName: ${{ parameters.artifacts.name }}
+          artifactType: Container
+          parallel: true
 
     - job: Ubuntu_16_04
       displayName: 'Ubuntu 16.04'
@@ -121,3 +132,10 @@ jobs:
           --configuration $(_BuildConfig)
           --prepareMachine
         displayName: Build
+
+    - job: Set_Tags
+      displayName: 'Set Tags'
+      steps:
+      - checkout: self
+        clean: true
+      - script: dotnet msbuild eng/repo.targets /t:TagCiBuilds $(_BuildArgs)
