--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -77,7 +77,7 @@
 
   <Target Name="_CreateTestPayloadInner" 
     DependsOnTargets="Publish;CollectXunitConsoleRunner" 
-    Condition="'$(IsTestProject)' == 'true' AND ($(HelixTargetQueue).StartsWith('Windows') OR '$(TargetFrameworkIdentifier)' != '.NETFramework')" 
+    Condition="'$(IsTestProject)' == 'true' AND ($(HelixTargetQueue.StartsWith('Windows')) OR '$(TargetFrameworkIdentifier)' != '.NETFramework')" 
     Returns="@(TestPayload)">
 
     <ConvertToAbsolutePath Paths="$(PublishDir)">
