Remove debug flag
Co-Authored-By: HaoK <HaoK@users.noreply.github.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,6 @@ jobs:
   steps:
   - checkout: self
     clean: true
-  - script: .\build.cmd -ci /t:Helix /p:Configuration=Debug
+  - script: .\build.cmd -ci /t:Helix
     displayName: Run build.cmd helix target
 
