Exclude logs from package artifacts because they're too big

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,13 +73,13 @@ jobs:
           -prepareMachine
           $(_BuildArgs)
         displayName: Build and Publish
-      - powershell: eng\common\msbuild.ps1 -verbosity n eng/repo.targets '/p:IsFinalBuild=$(IsFinalBuild)' '/p:CI=true'
+      - powershell: eng\common\msbuild.ps1 eng/repo.targets '/p:IsFinalBuild=$(IsFinalBuild)' '/p:CI=true'
         displayName: Set CI Tags
       - task: PublishBuildArtifacts@1
         displayName: Upload package artifacts
         condition: eq(variables['system.pullrequest.isfork'], false)
         inputs:
-          pathtoPublish: artifacts/
+          pathtoPublish: artifacts\$(_BuildConfig)
           ${{ if eq(parameters.artifacts.name, '') }}:
             artifactName: artifacts-$(AgentOsName)-$(BuildConfiguration)
           ${{ if ne(parameters.artifacts.name, '') }}:
