--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ jobs:
         inputs:
           pathtoPublish: artifacts\$(_BuildConfig)
           ${{ if eq(parameters.artifacts.name, '') }}:
-            artifactName: artifacts-$(AgentOsName)-$(BuildConfiguration)
+            artifactName: artifacts-Windows-$(_BuildConfig)
           ${{ if ne(parameters.artifacts.name, '') }}:
             artifactName: ${{ parameters.artifacts.name }}
           artifactType: Container
